[metadata]
name =
version =
author =
description =
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
url =
license = MIT
classifiers =

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    package = package:main